# termproject

./: CMakeLists.txt
includes/: linkedlist.h  node.h  textfilewriter.h
libs/: linkedlist.c  textfilewriter.c
src/: CMakeLists.txt  Player.c
tst/: CMakeLists.txt  PlayerTest.cc
